refactor(persistence): rename columns from player_id to player_uuid in data models